fix h1 size on mobile

--- a/css/responsive_custom.css
+++ b/css/responsive_custom.css
@@ -39,7 +39,7 @@
         		margin-top: 80px;
         	}
 
-				#section-profileImage #box-name h2 {
+				#section-profileImage #box-name h1 {
 					color: #fff;
 					font: normal bold 25px/35px 'Open Sans', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 					letter-spacing: 3px;
